# pix_one

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  COMPANY_MANAGEMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  README.md  package.json  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml
config/: desktop.py  docs.py
dashboard/: API_ENDPOINTS_REFERENCE.md  PAYMENT_FLOW_GUIDE.md  index.html  package-lock.json  package.json  proxyOptions.js  vite.config.js
dashboard/src/: App.jsx  main.jsx
dashboard/src/components/: app-sidebar.jsx  config-drawer.jsx  confirm-dialog.jsx  profile-dropdown.jsx  sign-out-dialog.jsx  site-header.jsx  theme-switch.jsx
dashboard/src/config/: api.constants.js  routes.constants.js
dashboard/src/context/: AuthContext.jsx  DirectionProvider.jsx  LayoutProvider.jsx  ThemeProvider.jsx
dashboard/src/data/: ServiceData.jsx
pix_one/: __init__.py  auth.py  hooks.py  modules.txt  socket_client.py
pix_one/common/: README.md  __init__.py
pix_one/config/: desktop.py  docs.py
pix_one/fixtures/: custom_field.json  print_format.json  property_setter.json  workspace.json
pix_one/overrides/: __init__.py  twofactor.py  user.py
pix_one/public/: node_modules
pix_one/realtime/: README.md  handlers.js  index.js  socketio.js  utils.py
pix_one/tasks/: compliance_jobs.py  monitoring_jobs.py  notification_jobs.py  subscription_scheduler.py
pix_one/utils/: __init__.py  company_hooks.py  custom_2fa.py  error_handler.py  jwt_auth.py  rate_limit.py  subscription_hooks.py  user_hooks.py
pix_one/www/: dashboard.html  dashboard.py
(+196 files in other folders)
